[package]
name = "rust-tello-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-gamepad = { git = "https://github.com/mixaal/rust-gamepad" }
rust-tello = { git = "https://github.com/mixaal/rust-tello" }
rust-sdl-ui = { git = "https://github.com/mixaal/rust-sdl-ui" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
lazy_static = "1.5.0"
